--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
     
     <footer>
         <p>Check out my YouTube channel: <a href="https://youtube.com/@binaryrush?si=6lqeBlWi-O8rXOY-channel/your-channel-id" target="_blank">My YouTube Channel</a></p>
+     <p>Click here for github: <a href="https://github.com/destroyer999-tech" target="_blank">My github account</a></p>
     </footer>
 
     <script>
