--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <h2>Interests & Hobbies</h2>
         <ul>
             <li><strong>Hacking:</strong> I enjoy exploring ethical hacking, understanding systems, and improving security.</li>
-            <li><strong>Mobile Legends:</strong> Playing MLBB for 4 years, I now main as a tank, with Gatotkaca being my favorite hero.</li>
+            <li><strong>Mobile Legends:</strong> Playing MLBB for 2 years, I now main as a tank, with Gatotkaca being my favorite hero.I enjoy paying assassin's more than tanks but my device seem to understand my desire and satisfaction.</li>
             <li><strong>Anime:</strong> I'm a fan of romance and comedy anime, always looking for captivating stories.</li>
         </ul>
     </section>
