--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Roshan's Portfolio</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.cs">
     <!-- Include Typed.js Library -->
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 </head> 
@@ -37,7 +37,7 @@
             <li><strong>Hacking:</strong> I enjoy exploring ethical hacking, understanding systems, and improving security.</li>
             <li><strong>Mobile Legends:</strong> Playing MLBB for 2 years, I now main as a tank, with Gatotkaca being my favorite hero.I enjoy playing assassin's more than tanks but my device seem to understand my desire and satisfaction.</li>
             <li><strong>Anime:</strong> I'm a fan of romance and comedy anime, always looking for captivating stories.It will be best to not talk about my pending anime's One-Piece,HxH,Monster,Black Clover and Bleach.</li>
-            <li><strong>Current Situations:</strong>PROBABLY STUCK INTO 73 EPISODES OF BLEACH.....🙃</li>
+            <li><strong>Current Situations:</strong>Probably stuck into 73 episodes of BLEACH.....🙃</li>
         </ul>
     </section>
     
@@ -51,6 +51,7 @@
         <p><strong>Short-term Goals:</strong> Improving my hacking skills and exploring new strategies in Mobile Legends.</p>
         <p><strong>Long-term Goals:</strong> Pursuing a career in technology, possibly in ethical hacking or professional gaming.</p>
     </section>
+    <strong>Presented By:ROSHAN KHADKA</strong>
     
     <footer>
         <p>Check out my YouTube channel: <a href="https://youtube.com/@binaryrush?si=6lqeBlWi-O8rXOY-channel/your-channel-id" target="_blank">My YouTube Channel</a></p>
