--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <h2>Interests & Hobbies</h2>
         <ul>
             <li><strong>Hacking:</strong> I enjoy exploring ethical hacking, understanding systems, and improving security.</li>
-            <li><strong>Mobile Legends:</strong> Playing MLBB for 2 years, I now main as a tank, with Gatotkaca being my favorite hero.I enjoy playing assassin's more than tanks but my device seem to understand my desire and satisfaction.</li>
+            <li><strong>Mobile Legends:</strong> Playing MLBB for 2 years, I now main as a tank, with Gatotkaca being my favorite hero.I enjoy playing assassin's more than tanks but my device doesn't seem to understand my desire and satisfaction.</li>
             <li><strong>Anime:</strong> I'm a fan of romance and comedy anime, always looking for captivating stories.It will be best to not talk about my pending anime's One-Piece,HxH,Monster,Black Clover and Bleach.</li>
             <li><strong>Current Situations:</strong>Probably stuck into 73 episodes of BLEACH.....🙃</li>
         </ul>
